services-aws.yaml
apiVersion: v1
kind: Service
metadata:
  name: content

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: content

  ports:
    - name: http
      port: 8080

  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: content

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: content

  ports:
    - name: http
      port: 8080
      nodePort: 30020

  type: NodePort
